Bug 403825 - Transaction validity filter is reset when re-opening configuration
Summary: Transaction validity filter is reset when re-opening configuration
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: reports (other bugs)
Version First Reported In: 5.0.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-01 09:33 UTC by Thomas Baumgart
Modified: 2019-02-05 07:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.4, 5.0.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2019-02-01 09:33:58 UTC
SUMMARY
The setting for the report transaction filter for validity on the details tab is lost when editing the report settings again.

STEPS TO REPRODUCE
1. Set validity to 'Invalid transaction'
2. Press 'Apply' button
3. Re-open the report configuration

OBSERVED RESULT

Validity filter is set to 'Any transaction'

EXPECTED RESULT

Validity filter is set to 'Invalid transaction'


ADDITIONAL INFORMATION

Applies to 5.0 and master branch
Comment 1 Thomas Baumgart 2019-02-01 15:05:33 UTC
Git commit 0b8ebec1b3789ba1d63810df6ac9f1fdad6f2a7e by Thomas Baumgart.
Committed on 01/02/2019 at 15:04.
Pushed by tbaumgart into branch '5.0'.

Implement persistence of validity filter
FIXED-IN: 5.0.4

M  +31   -1    kmymoney/mymoney/mymoneytransactionfilter.cpp
M  +13   -1    kmymoney/mymoney/mymoneytransactionfilter.h
M  +47   -3    kmymoney/plugins/xmlhelper/xmlstoragehelper.cpp
M  +5    -1    kmymoney/widgets/ktransactionfilter.cpp

https://commits.kde.org/kmymoney/0b8ebec1b3789ba1d63810df6ac9f1fdad6f2a7e
Comment 2 Ralf Habacker 2019-02-04 20:36:13 UTC
Git commit 8d00256f0eb8ff6c9c1e8a41dde1f90ced810d0b by Ralf Habacker.
Committed on 04/02/2019 at 20:36.
Pushed by habacker into branch '4.8'.

Implement persistence of validity filter
FIXED-IN:4.8.4, 5.0.4

M  +7    -0    kmymoney/dialogs/kreportconfigurationfilterdlg.cpp
M  +23   -0    kmymoney/mymoney/mymoneyreport.cpp
M  +28   -0    kmymoney/mymoney/mymoneytransactionfilter.cpp
M  +12   -0    kmymoney/mymoney/mymoneytransactionfilter.h

https://commits.kde.org/kmymoney/8d00256f0eb8ff6c9c1e8a41dde1f90ced810d0b