Implement persistence of validity filter

BUG: 403825
FIXED-IN: 5.0.4