kmymoney/mymoney/mymoneyreport.cpp
@@ -46,6 +46,7 @@ const QStringList MyMoneyReport::Chart::kText = QString("none,line,bar,pie,ring,
 // This should live in mymoney/mymoneytransactionfilter.h
 const QStringList kTypeText = QString("all,payments,deposits,transfers,none").split(',');
 const QStringList kStateText = QString("all,notreconciled,cleared,reconciled,frozen,none").split(',');
+const QStringList kValidityText = QString("any,valid,invalid").split(',');
 const QStringList kDateLockText = QString("alldates,untiltoday,currentmonth,currentyear,monthtodate,yeartodate,yeartomonth,lastmonth,lastyear,last7days,last30days,last3months,last6months,last12months,next7days,next30days,next3months,next6months,next12months,userdefined,last3tonext3months,last11Months,currentQuarter,lastQuarter,nextQuarter,currentFiscalYear,lastFiscalYear,today,next18months").split(',');
 const QStringList kAccountTypeText = QString("unknown,checkings,savings,cash,creditcard,loan,certificatedep,investment,moneymarket,asset,liability,currency,income,expense,assetloan,stock,equity,invalid").split(',');
 
@@ -503,6 +504,23 @@ void MyMoneyReport::write(QDomElement& e, QDomDocument *doc, bool anonymous) con
     }
   }
   //
+  // validity Filters
+  //
+  QList<int> validitylist;
+  if (validities(validitylist) && ! validitylist.empty()) {
+    // iterate over validities, and add each one
+    QList<int>::const_iterator it_validity = validitylist.constBegin();
+    while (it_validity != validitylist.constEnd()) {
+      QDomElement p = doc->createElement("VALIDITY");
+      p.setAttribute("validity", kValidityText[*it_validity]);
+      e.appendChild(p);
+
+      ++it_validity;
+    }
+  }
+
+
+  //
   // Number Filter
   //
 
@@ -800,6 +818,11 @@ bool MyMoneyReport::read(const QDomElement& e)
         i = kStateText.indexOf(c.attribute("state"));
         if (i != -1)
           addState(i);
+      }
+      if ("VALIDITY" == c.tagName() && c.hasAttribute("validity")) {
+        i = kValidityText.indexOf(c.attribute("validity"));
+        if (i != -1)
+          addValidity(i);
       }
       if ("NUMBER" == c.tagName()) {
         setNumberFilter(c.attribute("from"), c.attribute("to"));
